--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -21,7 +21,7 @@ body{
 
 }
 .navbar{
-    background-image:linear-gradient(to right,#ba1c17,#821717);
+    background-image:linear-gradient(to right,#198dd1,#198dd1);
     padding: 0 !important;
 
 }
@@ -53,7 +53,7 @@ body{
 }
 /* -----------------banner section------------ */
 #banner{
-    background-image: linear-gradient(to right,#ba1c17,#821717);
+    background-image: linear-gradient(to right,#198dd1,#198dd1);
     color: white;
     padding-top: 5%;
 
@@ -143,7 +143,7 @@ body{
     margin: 100px 0;
 }
 .testimonials{
-    border-left: 4px solid #821717;
+    border-left: 4px solid #198dd1;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -179,7 +179,7 @@ body{
 /* ------------footer section-------------- */
 #footer{
     /* background-image: linear-gradient(to right,#a517ba,#5f1782); */
-    background-image: linear-gradient(to right,#ba1c17,#821717);
+    background-image: linear-gradient(to right,#198dd1,#198dd1);
     color: #fff;
     margin-top: 20px;
 }
@@ -202,7 +202,7 @@ body{
     padding-top: 7px;
     border-radius: 2px;
     /* background-image: linear-gradient(to right,#a517ba,#5f1782); */
-    background-image: linear-gradient(to right,#ba1c17,#821717);
+    background-image: linear-gradient(to right,#198dd1,#198dd1);
 
 }
 .footer-box  .form-control{
@@ -219,7 +219,7 @@ body{
     border-radius: 0px;
     margin-top: 30px;
     width: 100%;
-    background-image: linear-gradient(to right,#ba1c17,#821717);
+    background-image: linear-gradient(to right,#198dd1,#198dd1);
 
 }
 hr{
@@ -242,7 +242,7 @@ hr{
     } */
     .title::before{
         content: '';
-        background:#db3232;
+        background:#198dd1;
         height: 2px;
         width: 100px;
         margin-left: auto;
@@ -252,7 +252,7 @@ hr{
     }
     .title::after{
         content: '';
-        background: #d61d1d;
+        background: #198dd1;
         height: 50px;
         width: 30px;
         margin-left: auto;
@@ -350,7 +350,7 @@ hr{
     height: 39px;
     width: 37px;
     text-align: center;
-    background-color:#ba1c17;
+    background-color:#198dd1;
     display: block;
     border-radius: 3px;
 }
