--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,7 +21,7 @@ body{
 
 }
 .navbar{
-    background-image:linear-gradient(to right,#ba1c17,#821717);
+    background-image:linear-gradient(to right,#198dd1,#198dd1);
     padding: 0 !important;
 
 }
@@ -53,7 +53,7 @@ body{
 }
 /* -----------------banner section------------ */
 #banner{
-    background-image: linear-gradient(to right,#ba1c17,#821717);
+    background-image: linear-gradient(to right,#198dd1,#198dd1);
     color: white;
     padding-top: 5%;
 
