--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -11,7 +11,7 @@
 .form {
   position: relative;
   z-index: 1;
-  background: #d12519;
+  background: #198dd1;
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
@@ -38,13 +38,13 @@ border-radius:10px;
   font-weight: bold;
   letter-spacing: .1em;
   outline: 0;
-  background: #17a589;
+  background: white;
   width: 100%;
   border: 0;
 border-radius:30px;
   margin: 0px 0px 8px;
   padding: 15px;
-  color: #FFFFFF;
+  color: black;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
@@ -53,7 +53,7 @@ border-radius:30px;
 
 }
 .form button:hover,.form button:focus {
-  background: #148f77;
+  background: blanchedalmond;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   transform: translateY(-4px);
 }
@@ -118,9 +118,9 @@ border-radius:30px;
 body {
   background: #fafafa; /* fallback for old browsers */
   background: -webkit-linear-gradient(right, #ffffff, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+  background: -moz-linear-gradient(right, white, white);
+  background: -o-linear-gradient(right, white, white);
+  background: linear-gradient(to left, white, white);
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
